# lattice

./: .gitignore  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr.yml  bug.yml  feature.yml
.github/workflows/: ci.yml
clients/cli/: Cargo.toml
clients/cli/src/: main.rs
crates/lattice-core/: Cargo.toml
crates/lattice-core/src/: error.rs  lib.rs
crates/lattice-dtn/: Cargo.toml
crates/lattice-dtn/src/: lib.rs
crates/lattice-homeserver/: Cargo.toml
crates/lattice-homeserver/src/: lib.rs
crates/lattice-mesh/: Cargo.toml
crates/lattice-mesh-ble/: Cargo.toml
crates/lattice-mesh-ble/src/: lib.rs
crates/lattice-mesh-lora/: Cargo.toml
crates/lattice-mesh-lora/src/: lib.rs
crates/lattice-mesh-wifi/: Cargo.toml
crates/lattice-mesh-wifi/src/: lib.rs
crates/lattice-mesh/src/: error.rs  lib.rs  message.rs  peer.rs  transport.rs
crates/lattice-moderation/: Cargo.toml
crates/lattice-moderation/src/: lib.rs
crates/lattice-voice/: Cargo.toml
crates/lattice-voice/src/: lib.rs
docs/ai-development/: AGENT_GUIDE.md  CONVENTIONS.md
docs/architecture/: overview.md
docs/architecture/adr/: 001-rust-core.md
docs/specs/: custom-emoji.md  mesh-protocol.md  voice-channels.md
scripts/: setup-github.sh
