[workspace]
resolver = "2"
members = [
    "crates/lattice-core",
    "crates/lattice-voice",
    "crates/lattice-moderation",
    "crates/lattice-mesh",
    "crates/lattice-mesh-ble",
    "crates/lattice-mesh-wifi",
    "crates/lattice-mesh-lora",
    "crates/lattice-dtn",
    "crates/lattice-homeserver",
    "clients/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later OR Commercial"
repository = "https://github.com/Emperiusm/lattice"
rust-version = "1.75"

[workspace.dependencies]
matrix-sdk = { version = "0.7", features = ["e2e-encryption", "sqlite"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
btleplug = "0.11"
ratatui = "0.26"
crossterm = "0.27"
tokio-test = "0.4"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
unwrap_used = "deny"
