[package]
name = "lattice-dtn"
description = "Delay-tolerant networking and store-and-forward for Lattice mesh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
