[package]
name = "lattice-mesh-wifi"
description = "Wi-Fi Direct/Aware transport backend for Lattice"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
